# ForecastFlowML

./: .gitignore  .readthedocs.yaml  LICENCE  MANIFEST.in  README.md  pyproject.toml  requirements-docs.txt  requirements.txt  setup.cfg  tox.ini
.github/workflows/: code_quality.yml  tests.yml
docs/source/: api_reference.rst  conf.py  examples.rst  forecastflowml.rst  get_started.rst  index.rst  meta_model.rst  quick_start.rst  usage.rst  usage2.rst  user_guide.rst  user_guides.rst
docs/source/_static/: switcher.json
docs/source/_templates/: custom-class-template.rst
docs/source/notebooks/: a.py  demo1.ipynb  demo2.ipynb  feature_engineering.ipynb  feature_importance.ipynb  grid_search.ipynb  save_load.ipynb
examples/: ForecastFlowML - Scaleable ML Time Series Forecasting with PySpark and Scikit-learn.html  ForecastFlowML_Demo.ipynb  app.py  demo.ipynb  demo.py
src/: artifacts.py  main.py  meta_model.py  optimizer.py  time_based_split.py
src/forecastflowml/: __init__.py  artifacts.py  core.py  direct_forecaster.py  evaluator.py  meta_model.py  model_selection.py  optimizer.py  preprocessing.py  time_based_split.py  utils.py
src/forecastflowml/data/: loader.py
src/forecastflowml/data/walmart_m5/: .part-00000-08806597-a8d2-415e-9089-78f61ac851fd-c000.snappy.parquet.crc  .part-00000-1bfe35f3-0707-4344-adc9-e57355f8a192-c000.snappy.parquet.crc  .part-00000-4f5f1703-edeb-4755-8b18-c9d9480e1d99-c000.snappy.parquet.crc  .part-00000-7244c3bb-a1f3-4f82-87cb-7b48b09d1867-c000.snappy.parquet.crc  .part-00000-808c5d4d-c9a1-4a56-849d-574f6ecc6d37-c000.snappy.parquet.crc  .part-00000-88cb10ac-7a9d-4a6c-bde8-14dd97e0b317-c000.snappy.parquet.crc  .part-00000-89e7613e-01ae-419b-ad4f-a88918f6ba77-c000.snappy.parquet.crc  .part-00000-8c05175c-bc3b-43c5-8c40-534a58f13658-c000.snappy.parquet.crc  .part-00000-9f31286e-d796-4b91-bbc0-8ab106e8f58c-c000.snappy.parquet.crc  .part-00000-b60942a0-feb3-4259-afbc-e5b1dec74de6-c000.snappy.parquet.crc  part-00000-1bfe35f3-0707-4344-adc9-e57355f8a192-c000.snappy.parquet  part-00000-4f5f1703-edeb-4755-8b18-c9d9480e1d99-c000.snappy.parquet  part-00000-7244c3bb-a1f3-4f82-87cb-7b48b09d1867-c000.snappy.parquet  part-00000-808c5d4d-c9a1-4a56-849d-574f6ecc6d37-c000.snappy.parquet  part-00000-88cb10ac-7a9d-4a6c-bde8-14dd97e0b317-c000.snappy.parquet  part-00000-89e7613e-01ae-419b-ad4f-a88918f6ba77-c000.snappy.parquet  part-00000-9f31286e-d796-4b91-bbc0-8ab106e8f58c-c000.snappy.parquet  part-00000-b60942a0-feb3-4259-afbc-e5b1dec74de6-c000.snappy.parquet
src/forecastmlflow/: evaluator.py  meta_model.py  optimizer.py
src/forecastmlflow/data/: loader.py
src/forecastmlflow/data/walmart/: .part-00000-2a723687-f7b7-4dd7-80f3-ace2b6822872-c000.snappy.parquet.crc
src/forecastmlflow/data/walmart_m5/: .part-00000-e757a815-fd46-4f53-ab8b-b021891c9c9b-c000.snappy.parquet.crc
src/mlforecastflow/: artifacts.py  meta_model.py  optimizer.py
src/mlforecastflow/data/: loader.py
tests/: conftest.py  test_direct_forecaster.py  test_dummy.py  test_feature_extractor.py  test_forecastflowml.py  test_meta_model.py  test_model_selection.py  test_pyspark.py
