[metadata] 
name = forecastflowml
version = 0.0.1
url = https://github.com/canerturkseven/forecastflowml
author = Caner Turkseven
author_email = canerturkseven@gmail.com
description = Scalable machine learning forecasting framework
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python

[options]
packages = find: 
include_package_data = True
python_requires = >=3.7
install_requires =
    -r requirements.txt

[options.extras_require]
docs = 
    -r requirements-docs.txt
dev = 
    -r requirements-dev.txt

[options.packages.find]  
where=src  
include=forecastflowml*  