[metadata] 
name = forecastflowml
version = 0.0.1
url = https://github.com/canerturkseven/forecastflowml
author = Caner Turkseven
author_email = canerturkseven@gmail.com
description = Scalable machine learning forecasting framework
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python

[options]
packages = find: 
include_package_data = True
python_requires = >=3.7
install_requires =
    numpy>=1.17.0
    pandas>=1.2.4
    pyspark>=2.3.2
    python_dateutil>=2.8.0
    scikit_learn>=1.0.0
    pyarrow>=3.0.0

[options.extras_require]
docs = 
    sphinx >= 4.0.0
    pydata_sphinx_theme == 0.13.3
    sphinx-autobuild
    myst_nb 
dev = 
    pytest
    black[jupyter]
    flake8 >= 3.7
    tox

[options.packages.find]  
where=src  
include=forecastflowml*  

[flake8]
max-line-length = 88
extend-ignore = E203
per-file-ignores = __init__.py:F401
